Archive2/09/305f0bb5cd309c/output
main.cpp: In function ‘int main()’:
main.cpp:40:29: error: cannot bind ‘int’ lvalue to ‘int&&’
     auto p2 = make_unique1(i); // lvalue
                             ^
main.cpp:25:20: error: in passing argument 1 of ‘std::unique_ptr<A> make_unique1(int&&)’
 std::unique_ptr<A> make_unique1(int&& u)
                    ^
